@@ -1,3 +1,6 @@
+	* fix resend logic in response to uTP SACK messages
+	* only act on uTP RST packets with correct ack_nr
+	* make uTP errors log in normal log mode (not require verbose)
 	* deduplicate web seed entries from torrent files
 	* improve error reporting from lazy_decode()
 
